edit renovate config, add tags

--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,24 @@
 {
-	"extends": ["config:recommended"],
-	"dependencyDashboard": true
+	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
+	"extends": ["config:base"],
+	"dependencyDashboard": true,
+	"labels": ["renovate"],
+	"rangeStrategy": "bump",
+	"packageRules": [
+		{
+			"matchPackageNames": ["renovate-pilot-package"],
+			"matchUpdateTypes": ["patch", "minor"],
+			"automerge": true,
+			"automergeType": "pr"
+		},
+		{
+			"matchPackageNames": ["renovate-pilot-package"],
+			"matchUpdateTypes": ["major"],
+			"automerge": false
+		},
+		{
+			"matchPackageNames": ["*"],
+			"enabled": false
+		}
+	]
 }
