--- a/renovate.json
+++ b/renovate.json
@@ -1,39 +1,26 @@
 {
 	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
-	"extends": [
-		"config:recommended"
-	],
+	"extends": ["config:recommended"],
 	"dependencyDashboard": true,
-	"labels": [
-		"renovate"
-	],
+	"labels": ["renovate"],
 	"rangeStrategy": "bump",
 	"packageRules": [
 		{
-			"matchPackageNames": [
-				"renovate-pilot-package"
-			],
-			"matchUpdateTypes": [
-				"patch",
-				"minor"
-			],
+			"matchPackageNames": ["renovate-pilot-package"],
+			"matchUpdateTypes": ["patch", "minor"],
 			"automerge": true,
 			"automergeType": "pr"
 		},
 		{
-			"matchPackageNames": [
-				"renovate-pilot-package"
-			],
-			"matchUpdateTypes": [
-				"major"
-			],
+			"matchPackageNames": ["renovate-pilot-package"],
+			"matchUpdateTypes": ["major"],
 			"automerge": false
-		},
-		{
-			"matchPackageNames": [
-				"*"
-			],
-			"enabled": false
 		}
+		// {
+		// 	"matchPackageNames": [
+		// 		"*"
+		// 	],
+		// 	"enabled": false
+		// }
 	]
 }
