add rules to renovate

--- a/renovate.json
+++ b/renovate.json
@@ -15,12 +15,10 @@
 			"matchPackageNames": ["renovate-pilot-package"],
 			"matchUpdateTypes": ["major"],
 			"automerge": false
+		},
+		{
+			"matchPackageNames": ["*"],
+			"enabled": false
 		}
-		// {
-		// 	"matchPackageNames": [
-		// 		"*"
-		// 	],
-		// 	"enabled": false
-		// }
 	]
 }
