--- a/renovate.json
+++ b/renovate.json
@@ -1,60 +1,35 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:recommended"
-  ],
-  "dependencyDashboard": true,
-  "labels": [
-    "renovate"
-  ],
-  "packageRules": [
-    {
-      "description": "Use replace strategy for internal package",
-      "matchManagers": [
-        "npm"
-      ],
-      "matchPackageNames": [
-        "renovate-pilot-package"
-      ],
-      "rangeStrategy": "replace"
-    },
-    {
-      "description": "Automerge patch/minor updates for internal package",
-      "matchManagers": [
-        "npm"
-      ],
-      "matchPackageNames": [
-        "renovate-pilot-package"
-      ],
-      "matchUpdateTypes": [
-        "patch",
-        "minor"
-      ],
-      "automerge": true,
-      "automergeType": "pr"
-    },
-    {
-      "description": "Do not automerge major updates for internal package",
-      "matchManagers": [
-        "npm"
-      ],
-      "matchPackageNames": [
-        "renovate-pilot-package"
-      ],
-      "matchUpdateTypes": [
-        "major"
-      ],
-      "automerge": false
-    },
-    {
-      "description": "Disable all other npm dependencies",
-      "matchManagers": [
-        "npm"
-      ],
-      "enabled": false,
-      "matchPackageNames": [
-        "!renovate-pilot-package"
-      ]
-    }
-  ]
+	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
+	"extends": ["config:recommended"],
+	"dependencyDashboard": true,
+	"labels": ["renovate"],
+	"packageRules": [
+		{
+			"description": "Use replace strategy for internal package",
+			"matchManagers": ["npm"],
+			"matchPackageNames": ["renovate-pilot-package"],
+			"rangeStrategy": "replace"
+		},
+		{
+			"description": "Automerge patch/minor updates for internal package",
+			"matchManagers": ["npm"],
+			"matchPackageNames": ["renovate-pilot-package"],
+			"matchUpdateTypes": ["patch", "minor"],
+			"automerge": true,
+			"automergeType": "pr"
+		},
+		{
+			"description": "Do not automerge major updates for internal package",
+			"matchManagers": ["npm"],
+			"matchPackageNames": ["renovate-pilot-package"],
+			"matchUpdateTypes": ["major"],
+			"automerge": false
+		},
+		{
+			"description": "Disable all other npm dependencies",
+			"matchManagers": ["npm"],
+			"enabled": false,
+			"matchPackageNames": ["!renovate-pilot-package"]
+		}
+	]
 }
