--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,9 @@
 	"extends": ["config:recommended"],
 	"dependencyDashboard": true,
 	"labels": ["renovate"],
+	"schedule": [
+    	"every day"
+  	],
 	"packageRules": [
 		{
 			"description": "Use replace strategy for internal package",
